--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>be5-metadata</artifactId>
-  <version>0.3.1-SNAPSHOT</version>
+  <version>0.3.1</version>
   <packaging>jar</packaging>
 
   <name>be5 metadata</name>
@@ -12,7 +12,7 @@
   <parent>
     <groupId>com.developmentontheedge.be5</groupId>
     <artifactId>be5-parent</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.3</version>
   </parent>
 
   <properties>
@@ -37,19 +37,19 @@
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-dbms</artifactId>
-      <version>0.1.1-SNAPSHOT</version>
+      <version>0.1.1</version>
     </dependency>
 
     <dependency>
       <groupId>com.developmentontheedge</groupId>
       <artifactId>be-sql</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.0</version>
     </dependency>
 
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-freemarker-patched</artifactId>
-      <version>2.3.20p4-SNAPSHOT</version>
+      <version>2.3.20p4</version>
     </dependency>
 
     <dependency>
@@ -88,36 +88,11 @@
 
   <build>
     <plugins>
-      <!-- plugin>
+       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.3</version>
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-            <configuration>
-              <quiet>true</quiet>
-              <additionalparam>-Xdoclint:none</additionalparam>
-              <tags>
-                <tag>
-                  <name>todo</name>
-                  <placement>a</placement>
-                  <head>TODO:</head>
-                </tag>
-                <tag>
-                  <name>pending</name>
-                  <placement>a</placement>
-                  <head>PENDING:</head>
-                </tag>
-              </tags>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin-->
-
+       </plugin>
     </plugins>
   </build>
+
 </project>
