--- a/database/pom.xml
+++ b/database/pom.xml
@@ -5,7 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>be5-database</artifactId>
-  <version>0.1.0</version>
+  <!--version>0.1.1</version-->
+  <version>0.4.0</version>
   <packaging>jar</packaging>
 
   <name>be5 database</name>
@@ -14,7 +15,7 @@
   <parent>
     <groupId>com.developmentontheedge.be5</groupId>
     <artifactId>be5-parent</artifactId>
-    <version>0.0.3</version>
+    <version>0.4.0</version>
   </parent>
 
   <properties>
@@ -28,13 +29,13 @@
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-base</artifactId>
-      <version>0.0.3</version>
+      <version>[0.4.0,)</version>
     </dependency>
 
     <dependency>
       <groupId>com.developmentontheedge</groupId>
       <artifactId>be-sql</artifactId>
-      <version>0.1.0</version>
+      <version>[0.1.0,)</version>
     </dependency>
 
     <dependency>
