--- a/util/app/pom.xml
+++ b/util/app/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.developmentontheedge.be5</groupId>
   <artifactId>be5-app</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1</version>
   <packaging>pom</packaging>
 
   <name>be5 app parent</name>
@@ -81,17 +81,17 @@
     <dependency>
       <groupId>com.developmentontheedge.be5.modules</groupId>
       <artifactId>be5-modules-core</artifactId>
-      <version>0.1.1</version>
+      <version>[0.4.0,)</version>
     </dependency>
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-jetty</artifactId>
-      <version>1.0.0</version>
+      <version>[1.0.0,)</version>
     </dependency>
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-test</artifactId>
-      <version>0.0.3</version>
+      <version>[0.4.0,)</version>
       <scope>test</scope>
     </dependency>
 
@@ -164,7 +164,7 @@
       <plugin>
         <groupId>com.developmentontheedge.be5</groupId>
         <artifactId>be5-maven-plugin</artifactId>
-        <version>0.1.1</version>
+        <version>0.1.2</version>
         <configuration>
           <projectPath>./</projectPath>
         </configuration>
@@ -185,7 +185,7 @@
           <dependency>
             <groupId>com.developmentontheedge.be5.modules</groupId>
             <artifactId>be5-modules-core</artifactId>
-            <version>0.1.1</version>
+            <version>[0.4.0,)</version>
           </dependency>
           <dependency>
             <groupId>com.h2database</groupId>
