--- a/dbms/pom.xml
+++ b/dbms/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>be5-dbms</artifactId>
-  <version>0.1.1</version>
+  <!--version>0.1.2</version-->
   <packaging>jar</packaging>
 
   <name>be5 dbms helpers</name>
@@ -12,7 +12,7 @@
   <parent>
     <groupId>com.developmentontheedge.be5</groupId>
     <artifactId>be5-parent</artifactId>
-    <version>0.0.3</version>
+    <version>0.4.0</version>
   </parent>
 
   <dependencies>
