--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>be5-metadata</artifactId>
-  <version>0.3.1</version>
+  <!--version>0.3.2</version-->
   <packaging>jar</packaging>
 
   <name>be5 metadata</name>
@@ -12,7 +12,7 @@
   <parent>
     <groupId>com.developmentontheedge.be5</groupId>
     <artifactId>be5-parent</artifactId>
-    <version>0.0.3</version>
+    <version>0.4.0</version>
   </parent>
 
   <properties>
@@ -25,31 +25,31 @@
     <dependency>
       <groupId>com.developmentontheedge</groupId>
       <artifactId>beans</artifactId>
-      <version>3.0.4</version>
+      <version>[3.0.4,)</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.developmentontheedge.be5</groupId>
+      <artifactId>be5-dbms</artifactId>
+      <version>[0.4.0,)</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.developmentontheedge</groupId>
+      <artifactId>be-sql</artifactId>
+      <version>[0.1.0,)</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.developmentontheedge.be5</groupId>
+      <artifactId>be5-freemarker-patched</artifactId>
+      <version>[2.3.21,)</version>
     </dependency>
 
     <dependency>
       <groupId>one.util</groupId>
       <artifactId>streamex</artifactId>
       <version>0.8.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.developmentontheedge.be5</groupId>
-      <artifactId>be5-dbms</artifactId>
-      <version>0.1.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.developmentontheedge</groupId>
-      <artifactId>be-sql</artifactId>
-      <version>0.1.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.developmentontheedge.be5</groupId>
-      <artifactId>be5-freemarker-patched</artifactId>
-      <version>2.3.20p4</version>
     </dependency>
 
     <dependency>
