--- a/modules/bpmn/pom.xml
+++ b/modules/bpmn/pom.xml
@@ -7,12 +7,12 @@
   <groupId>com.developmentontheedge.be5.modules</groupId>
   <artifactId>be5-modules-bpmn</artifactId>
   <name>be5 modules bpmn</name>
-  <version>0.0.1</version>
+  <!--version>0.0.2</version-->
 
   <parent>
     <artifactId>be5-parent</artifactId>
     <groupId>com.developmentontheedge.be5</groupId>
-    <version>0.0.3</version>
+    <version>0.4.0</version>
     <relativePath>../../</relativePath>
   </parent>
 
