--- a/modules/monitoring/pom.xml
+++ b/modules/monitoring/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>be5-parent</artifactId>
     <groupId>com.developmentontheedge.be5</groupId>
-    <version>0.0.3</version>
+    <version>0.4.0</version>
     <relativePath>../../</relativePath>
   </parent>
 
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-server</artifactId>
-      <version>0.1.2</version>
+      <version>[0.4.0,)</version>
     </dependency>
 
     <dependency>
