--- a/operation/pom.xml
+++ b/operation/pom.xml
@@ -10,33 +10,33 @@
   <parent>
     <artifactId>be5-parent</artifactId>
     <groupId>com.developmentontheedge.be5</groupId>
-    <version>0.0.3</version>
+    <version>0.4.0</version>
   </parent>
 
   <dependencies>
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-base</artifactId>
-      <version>0.0.3</version>
+      <version>[0.4.0,)</version>
     </dependency>
 
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-database</artifactId>
-      <version>0.1.0</version>
+      <version>[0.4.0,)</version>
     </dependency>
 
     <dependency>
       <groupId>com.developmentontheedge</groupId>
       <artifactId>beans-json</artifactId>
-      <version>1.0.1</version>
+      <version>[1.0.1,)</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-test-base</artifactId>
-      <version>0.0.3</version>
+      <version>[0.4.0,)</version>
       <scope>test</scope>
     </dependency>
 
