--- a/server/pom.xml
+++ b/server/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>be5-server</artifactId>
-  <version>0.1.2</version>
+  <!--version>0.1.3</version-->
   <packaging>jar</packaging>
 
   <name>be5 server</name>
@@ -12,38 +12,52 @@
   <parent>
     <groupId>com.developmentontheedge.be5</groupId>
     <artifactId>be5-parent</artifactId>
-    <version>0.0.3</version>
+    <version>0.4.0</version>
   </parent>
 
   <dependencies>
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-operation</artifactId>
-      <version>0.0.3</version>
+      <version>[0.4.0,)</version>
     </dependency>
 
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-web</artifactId>
-      <version>0.0.3</version>
+      <version>[0.4.0,)</version>
     </dependency>
 
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-database-model</artifactId>
-      <version>0.0.3</version>
+      <version>[0.4.0,)</version>
     </dependency>
 
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-query</artifactId>
-      <version>0.0.3</version>
+      <version>[0.4.0,)</version>
     </dependency>
 
     <dependency>
       <groupId>com.developmentontheedge</groupId>
       <artifactId>beans-json</artifactId>
-      <version>1.0.1</version>
+      <version>[1.0.1,)</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.developmentontheedge.be5</groupId>
+      <artifactId>be5-test-base</artifactId>
+      <version>[0.4.0,)</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.developmentontheedge.be5</groupId>
+      <artifactId>be5-maven-plugin</artifactId>
+      <version>0.1.2</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -59,27 +73,6 @@
     </dependency>
 
     <dependency>
-      <groupId>com.developmentontheedge.be5</groupId>
-      <artifactId>be5-test-base</artifactId>
-      <version>0.0.3</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.developmentontheedge.be5</groupId>
-      <artifactId>be5-maven-plugin</artifactId>
-      <version>0.1.1</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.developmentontheedge.be5</groupId>
-      <artifactId>be5-maven-plugin</artifactId>
-      <version>0.1.1</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
       <version>1</version>
@@ -92,7 +85,7 @@
       <plugin>
         <groupId>com.developmentontheedge.be5</groupId>
         <artifactId>be5-maven-plugin</artifactId>
-        <version>0.1.1</version>
+        <version>[0.4.0,)</version>
         <configuration>
           <projectPath>./src/test/resources/</projectPath>
           <saveProject>true</saveProject>
