--- a/util/jetty/pom.xml
+++ b/util/jetty/pom.xml
@@ -7,13 +7,13 @@
   <parent>
     <artifactId>be5-parent</artifactId>
     <groupId>com.developmentontheedge.be5</groupId>
-    <version>0.0.3</version>
+    <version>0.4.0</version>
     <relativePath>../../</relativePath>
   </parent>
 
   <name>be5 jetty</name>
   <artifactId>be5-jetty</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1</version>
 
   <properties>
     <!--jetty.version>9.3.30.v20211001</jetty.version-->
@@ -33,7 +33,7 @@
     <dependency>
       <groupId>com.developmentontheedge.be5</groupId>
       <artifactId>be5-base</artifactId>
-      <version>0.0.3</version>
+      <version>[0.4.0,)</version>
     </dependency>
 
     <dependency>
