--- a/util/test-base/pom.xml
+++ b/util/test-base/pom.xml
@@ -54,8 +54,8 @@
 
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>[1.10.19,)</version>
+      <artifactId>mockito-core</artifactId>
+      <version>[5.14.1,)</version>
     </dependency>
   </dependencies>
 
