--- a/util/test-base/pom.xml
+++ b/util/test-base/pom.xml
@@ -52,12 +52,44 @@
       <version>[4.12,)</version>
     </dependency>
 
-    <dependency>
+    <!--dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>[5.14.1,)</version>
-    </dependency>
+    </dependency-->
   </dependencies>
+
+
+    <profiles>
+        <!-- Profile for Java 8 -->
+        <profile>
+            <id>java8</id>
+            <activation>
+                <jdk>[1.8,)</jdk> <!-- Activated only for Java 8 -->
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-all</artifactId>
+                    <version>[1.10.19,)</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <!-- Profile for Java 11 and above (Default) -->
+        <profile>
+            <id>java11plus</id>
+            <activation>
+                <jdk>[11,)</jdk> <!-- Activated for Java 11 and above -->
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-core</artifactId>
+                    <version>[5.14.1,)</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 
   <build>
     <plugins>
