--- a/.github/workflows/run_tests_on_push_java_8.yaml
+++ b/.github/workflows/run_tests_on_push_java_8.yaml
@@ -1,4 +1,4 @@
-name: Tests in main branch
+name: Tests using Java 8
 
 # Trigger this workflow on pushes to the main branch or any pull requests
 on:
